# auto-updater

./: PKGBUILD
archlinux/: PKGBUILD.proto  build  clean
repo/: add  sync
src/: AUTHORS  ChangeLog  Makefile  Makefile.am  Makefile.in  NEWS  README  config.h  config.h.in~  config.status  configure  configure.ac
src/autom4te.cache/: output.0  output.1  output.2  output.3  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5
src/autoup/: common.h  gui.c  main.c
src/autoup/.deps/: gui.Po  main.Po
